adds icon for plugin

--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "engines": {
         "vscode": "^1.64.0"
     },
+    "icon": "./icon.png",
     "categories": [
         "Programming Languages"
     ],
