--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "engines": {
         "vscode": "^1.64.0"
     },
-    "icon": "./icon.png",
+    "icon": "icon.png",
     "categories": [
         "Programming Languages"
     ],
